<resources>
    <string name="app_name">My Gallery</string>
    <string name="archive">Archive</string>
    <string name="camera">Image</string>
    <string name="setting">Setting</string>
    <string name="security">Secure Folder</string>
    <string name="theme">Theme</string>
    <string name="language_text">Language</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="change_pin1">CHANGE YOUR PIN</string>

    <string name="validate_pin1">VALIDATION</string>
    <string name="change_pin2">4 digits are required</string>
    <string name="validate_pin2">Please fill in your old pin</string>
    <string name="image">Image</string>
    <string name="edit">Edit</string>
    <string name="your_gallery">Your Gallery</string>
    <string name="number_item">100 items</string>
    <string name="secure_folder">Secure Archive</string>
    <string name="secure_pin">PIN</string>
    <string name="mark_default">Mark app as default</string>
    <string name="display">Display Setting</string>
    <string name="cancel">Cancel</string>
    <string name="enter_pin">ENTER YOUR PIN</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="create_date">Creation date</string>
    <string name="size">Size</string>
    <string name="set_wallpaper">Set image as wallpaper</string>
    <string name="copy">Copy to clipboard</string>
    <string name="remove_secure">Remove from Secure Folder</string>
    <string name="move_secure">Move to Secure Folder</string>
    <string name="camera_option">Camera Option</string>
    <string name="choose_option">Do you want to use camera for image or video</string>
    <string name="img_save">Image saved</string>
    <string name="video_save">Video saved</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="digit_constraint">PIN must contains 4 digits</string>
    <string name="wrong_pin">Invalid PIN!</string>
    <string name="true_pin">PIN is correct!</string>
    <string name="pin_change_success">PIN Changed Successfully</string>
    <string name="initial_secure_folder">Please initialize your secure folder</string>
    <string name="init_pin_first_log_in">First time logging in?, please initialize your PIN</string>
    <string name="require_digit">4 digits are required</string>
    <string name="pin_create_success">PIN Created successfully</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="delete_video">Video deleted</string>
    <string name="delete_image">Image deleted</string>
    <string name="none">None</string>
    <string name="all_time">All time</string>
    <string name="grant_permission">Please grant those permissions to continue using this app!</string>
    <string name="list_type">Camera, Storage, Location, Internet</string>
    <string name="copy_click">Image copied to clipboard</string>
    <string name="location_re">No information</string>
    <string name="empty">EMPTY</string>
    <string name="copy_video_title">Make a copy</string>
    <string name="copy_video_message">Choose an album that keeps the copy</string>
    <string name="copy_video_mess_on">A copy has been moved to the album</string>
    <string name="copy_video_mess_off">Video has already existed in that album</string>
    <string name="all_favor">All items in your Favorite collection</string>
    <string name="all_secure">All items in your Secure Folder</string>
    <string name="list_face">List same face images</string>
    <string name="list_empty">No image was found!</string>

    <string name="copy1">Copy image to clipboard!</string>
    <string name="copy2">Copy image to another album!</string>

    <string name="copy_image_mess_off">Image has already existed in that album</string>
    <string name="secure_in">Media file has been moved to secure folder</string>
    <string name="secure_out">Media file has been removed from secure folder</string>
    <string name="favourite">Favourite</string>
    <string name="face_recognition">Group Faces</string>
    <string name="list_faces">List Faces</string>

    <string name="copyTitle">Copy Image</string>
    <string name="copyMessage">Copy to where?</string>
    <string name="resolution">Resolution</string>
    <string name="alert">Please wait! This may take a moment...</string>
</resources>
