<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.hanks.passcodeview.PasscodeView
        android:id="@+id/passcodeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:firstInputTip="@string/enter_pin"
        app:correctInputTip="@string/true_pin"
        app:wrongInputTip="@string/wrong_pin"
        android:background="?attr/backgroundState"
        app:correctStateColor="?attr/correctState"
        app:wrongStateColor="?attr/wrongState"
        app:normalStateColor="?attr/normalState"
        app:numberTextColor="?attr/textState"
        app:passcodeLength="5" />
</RelativeLayout>


