<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundcolor"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/tintcolor">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="back"
            android:src="@drawable/back_icon"
            android:layout_marginTop="3dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="?attr/textcolor"
            android:gravity="center"
            android:id="@+id/header_title"
          />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:id="@+id/language_layout">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/language_text"
            android:textSize="24dp"
            android:textColor="?attr/textcolor"
            android:id="@+id/language_text"
            />

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="?attr/textcolor"
            android:textSize="24dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:layout_height="35dp">

        <TextView
            android:id="@+id/mark_default"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mark_default"
            android:textColor="?attr/textcolor"
            android:textSize="24dp" />

        <Switch
            android:layout_weight="1"
            android:id="@+id/defaultSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="?attr/textcolor" />
    </LinearLayout>
</LinearLayout>